--- a/.gitignore
+++ b/.gitignore
@@ -13,10 +13,7 @@
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
-.idea/demo-project.iml
-.idea/modules.xml
-.idea/vcs.xml
-.idea/webResources.xml
+.idea/*
 golang/main
 golang/.vscode/launch.json
 golang/.vscode/settings.json
