--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,10 +14,10 @@ jobs:
       IMAGE_NAME: ${{ github.repository }}
       FORCE_COLOR: 1
     steps:
-    - uses: earthly/actions/setup-earthly@v1
+    - uses: earthly/actions/setup-earthly@latest
       with:
-        version: v0.7.4
-    - uses: actions/checkout@v2
+        version: latest
+    - uses: actions/checkout@latest
     - name: Put back the git branch into git (Earthly uses it for tagging)
       run: |
         branch=""
@@ -28,7 +28,7 @@ jobs:
         fi
         git checkout -b "$branch" || true
     - name: Log in to the Container registry
-      uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+      uses: docker/login-action@latest
       with:
         registry: ${{ env.REGISTRY }}
         username: ${{ github.actor }}
