--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
       IMAGE_NAME: ${{ github.repository }}
       FORCE_COLOR: 1
     steps:
-    - uses: earthly/actions/setup-earthly@1
+    - uses: earthly/actions/setup-earthly@v1
       with:
         version: latest
     - uses: actions/checkout@v3
