--- a/k8s/demo-project/values.yaml
+++ b/k8s/demo-project/values.yaml
@@ -1,8 +1,8 @@
 # Default values for demo-project.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
-
-replicaCount: 2
+# helm upgrade -i demo-project -n demo-project --create-namespace .
+replicaCount: 3
 
 image:
   repository: ghcr.io/lucasoarruda/demo-project
@@ -23,7 +23,8 @@ serviceAccount:
   # If not set and create is true, a name is generated using the fullname template
   name: ""
 
-podAnnotations: {}
+podAnnotations:
+  linkerd.io/inject: enabled
 
 podSecurityContext:
   fsGroup: 2000
@@ -63,11 +64,11 @@ resources:
     memory: 128Mi
   requests:
     cpu: 25m
-    memory: 32Mi
+    memory: 64Mi
 
 autoscaling:
   enabled: true
-  minReplicas: 1
+  minReplicas: 3
   maxReplicas: 100
   targetCPUUtilizationPercentage: 80
   targetMemoryUtilizationPercentage: 80
