--- a/.github/workflows/snyk-security.yml
+++ b/.github/workflows/snyk-security.yml
@@ -59,6 +59,8 @@ jobs:
       - name: Run Snyk to check for vulnerabilities
         uses: snyk/actions/golang@master
         continue-on-error: true # To make sure that SARIF upload gets called
+        with:
+          args: golang/
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
 
