--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,6 @@ golang/main
 golang/.vscode/launch.json
 golang/.vscode/settings.json
 loadtest/loadtest
+.dccache
+snyk-code.sarif
+golang/.dccache
