--- a/k8s/demo-project/values.yaml
+++ b/k8s/demo-project/values.yaml
@@ -2,6 +2,7 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 # helm upgrade -i demo-project -n demo-project --create-namespace .
+# helm template demo-project -n demo-project --create-namespace .
 replicaCount: 3
 
 image:
@@ -39,6 +40,9 @@ securityContext:
 service:
   type: ClusterIP
   port: 8000
+
+serviceMonitor:
+  enabled: false
 
 ingress:
   enabled: true
