[Bump] Bump to v0.0.3 (#2)
* initial build ci

* fixed branch on push

* bump earthfile ref and image name

* change ci registry

* dynamic tagging

* Update ci.yml

* Update ci.yml

* Update ci.yml

* initial helm working version

* added servicemonitor, loadtester and other improve

* Update snyk-security.yml

added golang test

* Update trivy.yml

* fix snyk env

* Update snyk-security.yml

try to fix golang path

* Update snyk-security.yml

reorder

* rollback to default synk

* gitignore and bump version

* added env token to snyk monitor

* job level env

* initial cheap terraform working version

* terraform lock

* gitignore terraform

* sync version and cluster size

* changed to free tier ec2 instance type

* force t2.micro on karpenter to stay free tier

* removed few configs not working

* added servicemonitor disable

* argocd reorder hpa

* added alb ingress tag the others will be ignored

* removed ingressclass

* added aws ingress

* fixed ingress class

* fix aws ingress

* fix values helm

* my wife demanded a better font homepage

* improved loatest cli output if no args

* added karpenter file

* changed node time to 2 hours

* added cert-manager setup file

* Initial README.md

* added argocd applictions and moved manifests

* bump to v0.0.3

* fixed swagger path and added to readme

---------

Co-authored-by: Lucas Arruda <zatesec@loatecs.com>

--- a/k8s/demo-project/values.yaml
+++ b/k8s/demo-project/values.yaml
@@ -2,6 +2,7 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 # helm upgrade -i demo-project -n demo-project --create-namespace .
+# helm template demo-project -n demo-project --create-namespace .
 replicaCount: 3
 
 image:
@@ -40,6 +41,9 @@ service:
   type: ClusterIP
   port: 8000
 
+serviceMonitor:
+  enabled: false
+
 ingress:
   enabled: true
   className: "kong"
@@ -49,14 +53,23 @@ ingress:
     konghq.com/protocols: https
     konghq.com/https-redirect-status-code: "308"
   hosts:
-    - host: demo-project.apps.oc.loatecs.com
+    - host: demo-project.apps.aws.loatecs.com
       paths:
         - path: /
-          pathType: ImplementationSpecific
+          pathType: Exact
   tls:
     - secretName: demo-project-tls
       hosts:
-        - demo-project.apps.oc.loatecs.com
+        - demo-project.apps.aws.loatecs.com
+  aws:
+    enabled: false
+    className: alb
+    annotations:
+      alb.ingress.kubernetes.io/scheme: internet-facing
+    hosts:
+      - paths:
+        - path: /
+          pathType: Exact
 
 resources:
   limits:
