few fixes on kong and servicemonitor

--- a/k8s/demo-project/templates/servicemonitor.yaml
+++ b/k8s/demo-project/templates/servicemonitor.yaml
@@ -1,5 +1,4 @@
-{{- define "demo-project.serviceMonitor" -}}
-{{- if and .Values.serviceMonitor.enabled .Values.service.enabled }}
+{{- if .Values.servicemonitor.enabled -}}
 apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
@@ -14,5 +13,4 @@ spec:
   selector:
     matchLabels:
       {{- include "demo-project.selectorLabels" . | nindent 4 }}
-{{- end }}
-{{- end }}
+{{- end -}}
