--- a/k8s/demo-project/templates/service.yaml
+++ b/k8s/demo-project/templates/service.yaml
@@ -2,6 +2,10 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "demo-project.fullname" . }}
+  annotations:
+    {{- if .Values.service.annotations }}
+    {{- toYaml .Values.service.annotations | nindent 4 }}
+    {{- end }}
   labels:
     {{- include "demo-project.labels" . | nindent 4 }}
 spec:
